deploy/k8s/staging/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: liqpro
  labels:
    name: liqpro
    environment: staging
